--- a/app/globals.css
+++ b/app/globals.css
@@ -66,3 +66,19 @@
 html {
   scroll-behavior: smooth;
 }
+.mask-gradient {
+  -webkit-mask-image: linear-gradient(
+    to right,
+    transparent,
+    black 10%,
+    black 90%,
+    transparent
+  );
+  mask-image: linear-gradient(
+    to right,
+    transparent,
+    black 10%,
+    black 90%,
+    transparent
+  );
+}
